<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:tabMode="scrollable"
                app:tabGravity="start"
                app:tabMinWidth="100dp"
                app:tabInlineLabel="true"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/new_folder_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:icon="@drawable/create_new_folder_fill0_wght400_grad0_opsz24"
                app:iconSize="24dp"
                app:iconPadding="0dp"
                app:iconGravity="textStart"/>

    </LinearLayout>

</com.google.android.material.appbar.AppBarLayout>
