<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/search_button"
            android:title="@string/search_title"
            android:enabled="false"
            android:visible="false"
            android:icon="@android:drawable/ic_menu_search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView"/>
    <item
            android:id="@+id/quickDelete"
            android:title="@string/quick_delete_text"
            android:visible="false"
            app:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_delete"/>
    <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="never"/>
</menu>
